# docs/swagger.json
@@ -315,6 +315,124 @@
                 }
             }
         },
+        "/api/v1/engage/activity/{aid}/user/list": {
+            "get": {
+                "description": "获取参加某一个活动的所有用户",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "engage"
+                ],
+                "summary": "获取参加某一个活动的所有用户",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "activity ID",
+                        "name": "aid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/serializer.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "allOf": [
+                                                {
+                                                    "$ref": "#/definitions/serializer.DataList"
+                                                },
+                                                {
+                                                    "type": "object",
+                                                    "properties": {
+                                                        "item": {
+                                                            "type": "array",
+                                                            "items": {
+                                                                "$ref": "#/definitions/serializer.User"
+                                                            }
+                                                        }
+                                                    }
+                                                }
+                                            ]
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/engage/user/{uid}/activity/list": {
+            "delete": {
+                "description": "获取某一个用户参加的所有活动",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "engage"
+                ],
+                "summary": "获取某一个用户参加的所有活动",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "user ID",
+                        "name": "uid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/serializer.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "allOf": [
+                                                {
+                                                    "$ref": "#/definitions/serializer.DataList"
+                                                },
+                                                {
+                                                    "type": "object",
+                                                    "properties": {
+                                                        "item": {
+                                                            "type": "array",
+                                                            "items": {
+                                                                "$ref": "#/definitions/serializer.Activity"
+                                                            }
+                                                        }
+                                                    }
+                                                }
+                                            ]
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/engage/{aid}": {
             "post": {
                 "description": "加入活动",
